--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ __pycache__/
 .history
 
 # Django #
-*.log
+# *.log
 *.pot
 *.pyc
 __pycache__
@@ -80,7 +80,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+# *.log
 local_settings.py
 #db.sqlite3
 db.sqlite3-journal
