--- a/eecrm/.coveragerc
+++ b/eecrm/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 branch = True
-omit = */tests/*,*migrations*, */__init__.py, constants.py,manage.py,base\wsgi.py,base\asgi.py
+omit = */tests/*,*migrations*, */__init__.py, constants.py,manage.py,base\wsgi.py,base\asgi.py,eecrm/api/tests/*
